--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -1,4 +1,4 @@
-.SearchBar{
+.Filter{
     display: flex;
     justify-content: flex-end;
 
